2008-12-16  Albert Chu <chu11@llnl.gov>

	* ipmi-sel/src/ipmi-sel.c (_hex_display_sel_records): Carry over
	previous fixes into this function.
	
2008-12-15  Albert Chu <chu11@llnl.gov>
	
	* ipmi-fru/src/ipmi-fru.c (_output_fru): Cleanup output.

2008-12-15  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/debug/ipmi-debug-kcs.c: New file.

	* libfreeipmi/include/freeipmi/debug/ipmi-debug.h,
	libfreeipmi/src/api/ipmi-api.c,
	libfreeipmi/src/api/ipmi-kcs-interface-api.c: Support detailed KCS
	debug output.

	* libfreeipmi/src/debug/ipmi-debug-lan.c (_ipmi_dump_lan_packet),
	libfreeipmi/src/debug/ipmi-debug-rmcpplus.c
	(_dump_rmcpplus_payload_data): Fix dump corner case.

2008-12-12  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/api/ipmi-lan-session-common.c
	(ipmi_lan_2_0_open_session): Fix Intel 2.0 workarounds.

	* ipmipower/src/ipmipower_check.c (ipmipower_check_integrity_pad),
	ipmiconsole/src/libipmiconsole/ipmiconsole_checks.c
	(ipmiconsole_check_integrity_pad): Fix integrity check corner case
	for certain cipher suite IDs.

	* ipmiconsole/ipmiconsole.8.pre.in: Add ipmiconsole
	troubleshooting notes.

	* ipmi-chassis/src/ipmi-chassis.h: Change -I (--identify) option
	to -i so it does not conflict with -I from --cipher-suite-id
	option.

	* ipmi-fru/src/ipmi-fru-util.c (ipmi-fru/src/ipmi-fru-util.c):
	Output failed checksums by default.
	
2008-12-11  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/include/freeipmi/record-format/ipmi-sdr-record-format.h:
	Add record type names.  Rename several macros for consistency to
	IPMI spec.

	* ipmi-sensors/: Output record type names along with hex codes.
	
	* libfreeipmi/, common/src/toolcommon/, ipmi-sensors/, ipmi-sel/,
	ipmi-sensors-config/, ipmimonitoring/: Update macros as necessary.

	* ipmi-sensors/: Output hex code along with group name in verbose
	and very verbose modes.
	
2008-12-09  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/api/ipmi-lan-session-common.c