@@ -1,6 +1,6 @@
 dnl Process this file with autoconf to produce a configure script.
 AC_INIT([freeipmi],[0.8.0.alpha0],[freeipmi-devel@gnu.org])
-AC_REVISION([$Id: configure.ac,v 1.161 2008-12-12 19:15:32 chu11 Exp $])
+AC_REVISION([$Id: configure.ac,v 1.162 2008-12-17 01:07:58 chu11 Exp $])
 
 dnl We require a modern autoconf and automake
 AC_PREREQ([2.57])
@@ -188,9 +188,9 @@ AC_SUBST([LIBIPMICONSOLE_VERSION_INFO])
 #
 # If any interfaces have been removed, set age = 0
 #
-LIBIPMIMONITORING_CURRENT=2
-LIBIPMIMONITORING_REVISION=2
-LIBIPMIMONITORING_AGE=1
+LIBIPMIMONITORING_CURRENT=3
+LIBIPMIMONITORING_REVISION=0
+LIBIPMIMONITORING_AGE=2
 LIBIPMIMONITORING_VERSION_INFO=$LIBIPMIMONITORING_CURRENT:$LIBIPMIMONITORING_REVISION:$LIBIPMIMONITORING_AGE
 AC_SUBST([LIBIPMIMONITORING_VERSION_INFO])
 
