@@ -1,5 +1,5 @@
 /*****************************************************************************\
- *  $Id: ipmi_monitoring.c,v 1.35 2008-12-09 18:24:33 chu11 Exp $
+ *  $Id: ipmi_monitoring.c,v 1.36 2008-12-17 01:07:58 chu11 Exp $
  *****************************************************************************
  *  Copyright (C) 2007-2008 Lawrence Livermore National Security, LLC.
  *  Copyright (C) 2006-2007 The Regents of the University of California.
@@ -326,31 +326,21 @@ ipmi_monitoring_sdr_cache_filenames(char *format, int *errnum)
   return 0;
 }
 
-int 
-ipmi_monitoring_sensor_readings_by_record_id(ipmi_monitoring_ctx_t c,
-                                             const char *hostname,
-                                             struct ipmi_monitoring_ipmi_config *config,
-                                             unsigned int sensor_reading_flags,
-                                             unsigned int *record_ids,
-                                             unsigned int record_ids_len)
+static int 
+_ipmi_monitoring_sensor_readings_by_record_id(ipmi_monitoring_ctx_t c,
+                                              const char *hostname,
+                                              struct ipmi_monitoring_ipmi_config *config,
+                                              unsigned int sensor_reading_flags,
+                                              unsigned int *record_ids,
+                                              unsigned int record_ids_len)
 {
   uint16_t record_count;
   int i, rv = -1;
 
-  if (!c || c->magic != IPMI_MONITORING_MAGIC)
-    return -1;
-
-  if (!_ipmi_monitoring_initialized)
-    {
-      c->errnum = IPMI_MONITORING_ERR_LIBRARY_UNINITIALIZED;
-      return -1;
-    }
-
-  if (sensor_reading_flags & ~IPMI_MONITORING_SENSOR_READING_FLAGS_MASK)
-    {
-      c->errnum = IPMI_MONITORING_ERR_PARAMETERS;
-      return -1;
-    }
+  assert(c);
+  assert(c->magic == IPMI_MONITORING_MAGIC);
+  assert(_ipmi_monitoring_initialized);
+  assert(!(sensor_reading_flags & ~IPMI_MONITORING_SENSOR_READING_FLAGS_MASK));
 
   ipmi_monitoring_iterator_destroy(c);
 
@@ -462,15 +452,14 @@ ipmi_monitoring_sensor_readings_by_record_id(ipmi_monitoring_ctx_t c,
 }
 
 int 
-ipmi_monitoring_sensor_readings_by_sensor_group(ipmi_monitoring_ctx_t c,
-                                                const char *hostname,
-                                                struct ipmi_monitoring_ipmi_config *config,
-                                                unsigned int sensor_reading_flags,
-                                                unsigned int *sensor_groups,
-                                                unsigned int sensor_groups_len)
-{
-  uint16_t record_count;
-  int i, rv = -1;
+ipmi_monitoring_sensor_readings_by_record_id(ipmi_monitoring_ctx_t c,
+                                             const char *hostname,
+                                             struct ipmi_monitoring_ipmi_config *config,
+                                             unsigned int sensor_reading_flags,
+                                             unsigned int *record_ids,
+                                             unsigned int record_ids_len)
+{ 
+  int rv;
 
   if (!c || c->magic != IPMI_MONITORING_MAGIC)
     return -1;
@@ -481,12 +470,87 @@ ipmi_monitoring_sensor_readings_by_sensor_group(ipmi_monitoring_ctx_t c,
       return -1;
     }
 
-  if ((sensor_reading_flags & ~IPMI_MONITORING_SENSOR_READING_FLAGS_MASK)
-      || (sensor_groups && !sensor_groups_len))
+  if (sensor_reading_flags & ~IPMI_MONITORING_SENSOR_READING_FLAGS_MASK)
     {
       c->errnum = IPMI_MONITORING_ERR_PARAMETERS;
       return -1;
     }
+
+  c->callback = NULL;
+  c->callback_data = NULL;
+  c->callback_sensor_reading = NULL;
+
+  rv = _ipmi_monitoring_sensor_readings_by_record_id(c,
+                                                     hostname,
+                                                     config,
+                                                     sensor_reading_flags,
+                                                     record_ids,
+                                                     record_ids_len);
+
+  c->callback_sensor_reading = NULL;
+
+  return rv;
+}
+
+int 
+ipmi_monitoring_sensor_readings_by_record_id_callback(ipmi_monitoring_ctx_t c,
+                                                      const char *hostname,
+                                                      struct ipmi_monitoring_ipmi_config *config,
+                                                      unsigned int sensor_reading_flags,
+                                                      unsigned int *record_ids,
+                                                      unsigned int record_ids_len,
+                                                      Ipmi_Monitoring_Sensor_Readings_Callback callback,
+                                                      void *callback_data)
+{
+  int rv;
+
+  if (!c || c->magic != IPMI_MONITORING_MAGIC)
+    return -1;
+
+  if (!_ipmi_monitoring_initialized)
+    {
+      c->errnum = IPMI_MONITORING_ERR_LIBRARY_UNINITIALIZED;
+      return -1;
+    }
+
+  if (sensor_reading_flags & ~IPMI_MONITORING_SENSOR_READING_FLAGS_MASK)
+    {
+      c->errnum = IPMI_MONITORING_ERR_PARAMETERS;
+      return -1;
+    }
+  
+  c->callback = callback;
+  c->callback_data = callback_data;
+  c->callback_sensor_reading = NULL;
+
+  rv = _ipmi_monitoring_sensor_readings_by_record_id(c,
+                                                     hostname,
+                                                     config,
+                                                     sensor_reading_flags,
+                                                     record_ids,
+                                                     record_ids_len);
+  
+  c->callback_sensor_reading = NULL;
+
+  return rv;
+}
+
+static int 
+_ipmi_monitoring_sensor_readings_by_sensor_group(ipmi_monitoring_ctx_t c,
+                                                 const char *hostname,
+                                                 struct ipmi_monitoring_ipmi_config *config,
+                                                 unsigned int sensor_reading_flags,
+                                                 unsigned int *sensor_groups,
+                                                 unsigned int sensor_groups_len)
+{
+  uint16_t record_count;
+  int i, rv = -1;
+
+  assert(c);
+  assert(c->magic == IPMI_MONITORING_MAGIC);
+  assert(_ipmi_monitoring_initialized);
+  assert(!(sensor_reading_flags & ~IPMI_MONITORING_SENSOR_READING_FLAGS_MASK));
+  assert(!(sensor_groups && !sensor_groups_len));
 
   ipmi_monitoring_iterator_destroy(c);
 
@@ -554,6 +618,206 @@ ipmi_monitoring_sensor_readings_by_sensor_group(ipmi_monitoring_ctx_t c,
   ipmi_monitoring_iterator_destroy(c);
   ipmi_monitoring_ipmi_communication_cleanup(c);
   return -1;
+}
+
+int 
+ipmi_monitoring_sensor_readings_by_sensor_group(ipmi_monitoring_ctx_t c,
+                                                const char *hostname,
+                                                struct ipmi_monitoring_ipmi_config *config,
+                                                unsigned int sensor_reading_flags,
+                                                unsigned int *sensor_groups,
+                                                unsigned int sensor_groups_len)
+{
+  int rv;
+
+  if (!c || c->magic != IPMI_MONITORING_MAGIC)
+    return -1;
+
+  if (!_ipmi_monitoring_initialized)
+    {
+      c->errnum = IPMI_MONITORING_ERR_LIBRARY_UNINITIALIZED;
+      return -1;
+    }
+
+  if ((sensor_reading_flags & ~IPMI_MONITORING_SENSOR_READING_FLAGS_MASK)
+      || (sensor_groups && !sensor_groups_len))
+    {
+      c->errnum = IPMI_MONITORING_ERR_PARAMETERS;
+      return -1;
+    }
+
+  c->callback = NULL;
+  c->callback_data = NULL;
+  c->callback_sensor_reading = NULL;
+
+  rv = _ipmi_monitoring_sensor_readings_by_sensor_group(c,
+                                                        hostname,
+                                                        config,
+                                                        sensor_reading_flags,
+                                                        sensor_groups,
+                                                        sensor_groups_len);
+
+  c->callback_sensor_reading = NULL;
+  return rv;
+}
+
+int 
+ipmi_monitoring_sensor_readings_by_sensor_group_callback(ipmi_monitoring_ctx_t c,
+                                                         const char *hostname,
+                                                         struct ipmi_monitoring_ipmi_config *config,
+                                                         unsigned int sensor_reading_flags,
+                                                         unsigned int *sensor_groups,
+                                                         unsigned int sensor_groups_len,
+                                                         Ipmi_Monitoring_Sensor_Readings_Callback callback,
+                                                         void *callback_data)
+{
+  int rv;
+
+  if (!c || c->magic != IPMI_MONITORING_MAGIC)
+    return -1;
+
+  if (!_ipmi_monitoring_initialized)
+    {
+      c->errnum = IPMI_MONITORING_ERR_LIBRARY_UNINITIALIZED;
+      return -1;
+    }
+
+  if ((sensor_reading_flags & ~IPMI_MONITORING_SENSOR_READING_FLAGS_MASK)
+      || (sensor_groups && !sensor_groups_len))
+    {
+      c->errnum = IPMI_MONITORING_ERR_PARAMETERS;
+      return -1;
+    }
+
+  c->callback = callback;
+  c->callback_data = callback_data;
+  c->callback_sensor_reading = NULL;
+
+  rv = _ipmi_monitoring_sensor_readings_by_sensor_group(c,
+                                                        hostname,
+                                                        config,
+                                                        sensor_reading_flags,
+                                                        sensor_groups,
+                                                        sensor_groups_len);
+
+  c->callback_sensor_reading = NULL;
+
+  return rv;
+}
+
+int 
+ipmi_monitoring_callback_sensor_group(ipmi_monitoring_ctx_t c)
+{
+  if (!c || c->magic != IPMI_MONITORING_MAGIC)
+    return -1;
+
+  if (!c->callback_sensor_reading)
+    {
+      c->errnum = IPMI_MONITORING_ERR_SENSOR_NOT_FOUND;
+      return -1;
+    }
+
+  return c->callback_sensor_reading->sensor_group;
+}
+
+char *
+ipmi_monitoring_callback_sensor_name(ipmi_monitoring_ctx_t c)
+{
+  if (!c || c->magic != IPMI_MONITORING_MAGIC)
+    return NULL;
+
+  if (!c->callback_sensor_reading)
+    {
+      c->errnum = IPMI_MONITORING_ERR_SENSOR_NOT_FOUND;
+      return NULL;
+    }
+
+  return c->callback_sensor_reading->sensor_name;
+}
+
+
+int 
+ipmi_monitoring_callback_sensor_state(ipmi_monitoring_ctx_t c)
+{
+  if (!c || c->magic != IPMI_MONITORING_MAGIC)
+    return -1;
+
+  if (!c->callback_sensor_reading)
+    {
+      c->errnum = IPMI_MONITORING_ERR_SENSOR_NOT_FOUND;
+      return -1;
+    }
+
+  return c->callback_sensor_reading->sensor_state;
+}
+
+int 
+ipmi_monitoring_callback_sensor_units(ipmi_monitoring_ctx_t c)
+{
+  if (!c || c->magic != IPMI_MONITORING_MAGIC)
+    return -1;
+
+  if (!c->callback_sensor_reading)
+    {
+      c->errnum = IPMI_MONITORING_ERR_SENSOR_NOT_FOUND;
+      return -1;
+    }
+
+  return c->callback_sensor_reading->sensor_units;
+}
+
+int 
+ipmi_monitoring_callback_sensor_reading_type(ipmi_monitoring_ctx_t c)
+{
+  if (!c || c->magic != IPMI_MONITORING_MAGIC)
+    return -1;
+
+  if (!c->callback_sensor_reading)
+    {
+      c->errnum = IPMI_MONITORING_ERR_SENSOR_NOT_FOUND;
+      return -1;
+    }
+
+  return c->callback_sensor_reading->sensor_reading_type;
+}
+
+int 
+ipmi_monitoring_callback_sensor_bitmask_type(ipmi_monitoring_ctx_t c)
+{
+  if (!c || c->magic != IPMI_MONITORING_MAGIC)
+    return -1;
+
+  if (!c->callback_sensor_reading)
+    {
+      c->errnum = IPMI_MONITORING_ERR_SENSOR_NOT_FOUND;
+      return -1;
+    }
+
+  return c->callback_sensor_reading->sensor_bitmask_type;
+}
+
+void *
+ipmi_monitoring_callback_sensor_reading(ipmi_monitoring_ctx_t c)
+{
+  if (!c || c->magic != IPMI_MONITORING_MAGIC)
+    return NULL;
+
+  if (!c->callback_sensor_reading)
+    {
+      c->errnum = IPMI_MONITORING_ERR_SENSOR_NOT_FOUND;
+      return NULL;
+    }
+
+  if (c->callback_sensor_reading->sensor_reading_type == IPMI_MONITORING_SENSOR_READING_TYPE_UNSIGNED_INTEGER8_BOOL)
+    return &(c->callback_sensor_reading->sensor_reading.bool_val);
+  else if (c->callback_sensor_reading->sensor_reading_type == IPMI_MONITORING_SENSOR_READING_TYPE_UNSIGNED_INTEGER32)
+    return &(c->callback_sensor_reading->sensor_reading.integer_val);
+  else if (c->callback_sensor_reading->sensor_reading_type == IPMI_MONITORING_SENSOR_READING_TYPE_DOUBLE)
+    return &(c->callback_sensor_reading->sensor_reading.double_val);
+  else if (c->callback_sensor_reading->sensor_reading_type == IPMI_MONITORING_SENSOR_READING_TYPE_UNSIGNED_INTEGER16_BITMASK)
+    return &(c->callback_sensor_reading->sensor_reading.integer_bitmask_val);
+
+  return NULL;
 }
 
 int 
